7.10
  * Correct bug in computing ne (not equal): was 1 (true) for two different
    "S" vars...
7.09
  * Internal change of mdiag: diagnostics are more precise.
  * All lexers, ignore '\r'.
  * CAT: make the initial "identity" string optional.
7.08  
  * C11: add NA for non-atomics events (needed by popl15c11 models from the catalogue)
  * LISA: change rmw sematics as fetch_and_op , was op_and_fetch
7.07
  * herd: set 'Atom' -> set 'X' (compatibility)
7.06
  * herd: Add set 'Atom' for LISA atimic events.
  * Dependencies for C, always "real".
  * generators: -realdep <bool> option
  * LISA, non-conditional branch.
7.05
  * litmus -noalign option
7.04
7.03
7.02

  * LISA :backward compatibility: f[sync] -> call[sync]
  * LISA : introduce call instructions.
  * herd : make exchange an expression (was an instruction !)
  * herd : use short memory model names in pictures
  * lib : C make exchange and fetch expressions, as they should be.
  * tools : handle C arch completely
7.01

  * herd: Add minimal atomicity to LL/SS (PPC and ARM).
  * herd: Recursive procedure + match instruction.

7.00 Release 'Seven'
  * herd: refactored release.
  * litmus:  -driver optiopn to generate standalone C programs or Objective C
  * litmus:  More configuration files (nexus10..)
  * litmus:  Refactoring: avoid mutable internal flags.

  
5.01 Release
  * litmus:  litmus option -crossrun adb -> run.sh connects to device using adb
    (Android Debugging Bridge)

5.00 Release
   * gen: Added classify tool
   * gen: Uniform naming scheme, clarify usage and document
   * gen: Refactor diyone second mode, in the same style as diy/diycross
   * gen: Support for atomic accesses (undocumented)

  * litmus:  added the mcycles tool
  * litmus:  iPad and asus TF300T configuration files.
  * litmus:  New user synchronisation mode userfence (suggested by Javi Merino)
  * litmus:  More POSIX compliant code in two occasions (malloc/errno and