@@ -6,7 +6,7 @@ OCB=ocamlbuild $(OCBOPT) -cflags -bin-annot,-w,A-4-29-41-45 -classic-display $(J
 
 EXTRAPROGS=
 SCRIPTS=mnstates
-PROGS=mcycles.byte msort.byte mapply.byte msum.byte mdiff.byte mcompare.byte mnames.byte mfind.byte mcond.byte recond.byte splitdot.byte mprog.byte mfilter.byte mlog2cond.byte moutcomes.byte mobserved.byte mproj.byte splitcond.byte ksort.byte knames.byte mtopos.byte mmixer.byte mcmp.byte madd.byte mdiag.byte mhash.byte mselect.byte mflags.byte
+PROGS=mcycles.byte msort.byte mapply.byte msum.byte mdiff.byte mcompare.byte mnames.byte mfind.byte mcond.byte recond.byte splitdot.byte mprog.byte mfilter.byte mlog2cond.byte moutcomes.byte mobserved.byte mproj.byte splitcond.byte ksort.byte knames.byte mtopos.byte mmixer.byte mcmp.byte madd.byte mdiag.byte mhash.byte mselect.byte mflags.byte mshowhashes.byte
 
 all: native
 
