@@ -1,3 +1,4 @@
+  * tools : add mshowhashes to list test hashes + share code with mdiag
 7.10
   * Correct bug in computing ne (not equal): was 1 (true) for two different
     "S" vars...
